--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,23 @@
 <resources>
     <string name="app_name">Megaquiz</string>
+    <string name="welcome">Welcome to MegaQuiz</string>
+    <string name="begin">Begin with Quiz here</string>
+    <string name="start">Start</string>
+
+    <string name="question"></string>
+    <string name="a"></string>
+    <string name="b"></string>
+    <string name="c"></string>
+    <string name="d"></string>
+
+    <string name="incorrect">False</string>
+    <string name="correct">Correct</string>
+    <string name="resume">Resume</string>
+
+    <string name="congratulation">Congratulation!</string>
+    <string name="time">Time:!</string>
+    <string name="correctAnwsers">Correct Anwsers:</string>
+    <string name="returnStart">Back to Start</string>
+
+
 </resources>
